# pdf-parsing-comparison

./: .gitignore  Makefile  README.md  extract_with_camelot.py  extract_with_pdfplumber.py  extract_with_pymupdf.py  pyproject.toml  run_comparison.py
.claude/: settings.local.json
parsers/: __init__.py  extract_with_amazon_textract.py  extract_with_docling.py  extract_with_marker.py  extract_with_markitdown.py  extract_with_pdf_oxide.py  extract_with_pymupdf4llm.py  extract_with_pypdf.py  extract_with_tesseract.py  pdf_rendering_utils.py
scripts/: create_test_fixtures.py
